[gd_scene format=3 uid="uid://c83coi3nvrxuo"]

[ext_resource type="Script" uid="uid://danlx0tv6fnpi" path="res://scripts/testing_webrtc/web_rtc_menu.gd" id="1_wx7f0"]

[node name="WebRTCMenu" type="Control" unique_id=1915079874]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wx7f0")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1220403074]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer" unique_id=802961318]
layout_mode = 2
columns = 2

[node name="CreateOfferButton" type="Button" parent="PanelContainer/GridContainer" unique_id=1894334434]
layout_mode = 2
text = "Create Offer"

[node name="OfferLineEdit" type="LineEdit" parent="PanelContainer/GridContainer" unique_id=1709309052]
layout_mode = 2
text = "1"

[node name="AsnwerButton" type="Button" parent="PanelContainer/GridContainer" unique_id=899544687]
layout_mode = 2
text = "Answer"

[node name="AnswerLineEdit" type="LineEdit" parent="PanelContainer/GridContainer" unique_id=1168567499]
layout_mode = 2
text = "1"

[node name="CreateServerButton" type="Button" parent="PanelContainer/GridContainer" unique_id=102414237]
layout_mode = 2
text = "Create Server"

[node name="ServerPortLineEdit" type="LineEdit" parent="PanelContainer/GridContainer" unique_id=1886610790]
layout_mode = 2
text = "4444"

[connection signal="pressed" from="PanelContainer/GridContainer/CreateOfferButton" to="." method="_on_create_offer_button_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/AsnwerButton" to="." method="_on_asnwer_button_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/CreateServerButton" to="." method="_on_create_server_button_pressed"]
